[tool.poetry]
name = "sr"
version = "0.1.0"
description = ""
authors = ["cheolm1n(주철민) <choelm1n@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tiktoken = "^0.4.0"
openai = "^0.27.8"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

